# IGESS

./: .gitignore  README.md  pyproject.toml
data-tables/: README.md
data-tables/Datas/: __tables__.xlsx  activities.xlsx  activity_outputs.xlsx  constants.xlsx  generators.xlsx  milestones.xlsx  prestige_layers.xlsx  resources.xlsx  upgrades.xlsx
docs/: agent-operator-guide.md  luban-workflow.md  roadmap-v0.2-v0.4.md  roadmap-v0.5-agent-analyst.md
examples/shelldiver_v0/: economy.yaml
projects/fish-rng/: HANDOFF.md  (+4 more)
scripts/: run_sample.ps1
tests/: activity_fixtures.py  fish_test_support.py  test_agent_analyst.py  test_analyzer.py  test_authoring_change.py  test_authoring_cli.py  test_authoring_entity_schema.py  test_authoring_exports.py  test_authoring_locking.py  test_authoring_probe.py  test_authoring_project.py  test_authoring_response.py  test_authoring_service.py  test_authoring_status.py  test_authoring_transactions.py  test_authoring_workbook_source.py  test_authoring_yaml_source.py  test_behavior.py  test_behavior_config.py  test_change_records.py  test_checkpoint.py  test_cli_diagnostics.py  test_cli_help.py  test_cli_scan.py  test_dashboard.py  test_docs_examples.py  test_ergonomics.py  test_fish_barbell_commands.py  test_fish_behavior_core.py  test_fish_behavior_growth.py  test_fish_behavior_hall.py  test_fish_engine.py  test_fish_hall_commands.py  test_fish_rng.py  test_fish_state.py  test_fish_throw_commands.py  test_fish_throw_data.py  test_fish_trash_production.py  test_formula.py  test_human_numbers.py  (+16 more)
tools/: create_sample_luban_sources.py
(+170 files in other folders)
