[project]
name = "igess"
version = "0.5.0"
description = "Incremental game economy simulation DSL"
requires-python = ">=3.11"
dependencies = [
  "openpyxl>=3.1",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
igess = "igess.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
igess = ["reporting/assets/*"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = '-m "not external_data"'
markers = [
  "external_data: tests that require an explicitly provisioned external data snapshot",
]
